--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,100 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.student.musicplayer.MainActivity">
 
-    <TextView
+  <TextView
+        android:id="@+id/MusicPlayerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="\u266b Sweet Music Player \u266b"
+        android:textSize="35sp" />
+
+    <ImageView
+        android:id="@+id/PictureView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/MusicPlayerView"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/images"
+        android:textSize="35sp" />
+
+    <TextView
+        android:id="@+id/TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/PictureView"
+        android:layout_centerHorizontal="true"
+        android:text="SONG NAME"
+        android:textSize="36sp" />
+
+
+    <Button
+        android:id="@+id/pauseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="||"
+        android:textSize="26sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="pauseSong"/>
+
+    <Button
+        android:id="@+id/playButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = ">"
+        android:textSize="26sp"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/pauseButton"
+        android:onClick="playSong"/>
+
+    <Button
+        android:id="@+id/fastFowardButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=">>"
+        android:textSize="26sp"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/playButton"
+        android:onClick="playSong"/>
+
+    <Button
+        android:id="@+id/rewindButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="<<"
+        android:textSize="26sp"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@id/stopButton"
+        android:onClick="playSong"/>
+
+    <Button
+        android:id="@+id/stopButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="O"
+        android:textSize="26sp"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@id/pauseButton"
+        android:onClick="playSong"/>
+
+    <TextView
+        android:id="@+id/currentTimeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0 min, 0 sec"
+        android:textSize="20sp"
+        android:layout_above="@id/rewindButton"
+        android:layout_alignLeft="@id/rewindButton"/>
+    <TextView
+        android:id="@+id/endTimeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0 min, 0 sec"
+        android:textSize="20sp"
+        android:layout_above="@id/fastFowardButton"
+        android:layout_alignRight="@id/fastFowardButton"/>
+
+
 </RelativeLayout>
